@@ -6,9 +6,11 @@ Version 0.32
  since 0.31:
   * removed requirement for Digest::SHA1 (issue #1832549).
     We now use the more capable Digest::SHA module for SHA-1 and SHA-256.
-  * bugfix:
+  * bugfixes:
     * granularity checking should be case-sensitive (issue #1938112).
     * identity tag now uses quoted-printable encoding (issue #1839015).
+  * API improvement:
+    * implemented identity_source() for DkSignature objects 
 
 
 Version 0.31 - released 2008-04-14
